# Note

./: .clang-format  .gitignore  BiliBili 收藏视频分类.md  CMake + Kconfig.md  CPP 网络库.md  C_C++语法.md  Cmake 用法.md  DL&ML.md  JWT（JSON Web Token）.md  Java.md  MFCC.md  Python.md  QT.md  README.md  STL.md  TCP_IP通信.md  Uni-App.md  Untitled.md  import_func_for_51.md  import_func_for_esp32.md  import_func_for_stm32.md  单片机原理.md  卡诺图.md  多任务处理.md  多任务的进化史.md  多线程.md  数据结构和算法.md  电路分析基本原理.md  设计模式.md
C51_Board/: import_func_for_51.md
C51_Board/AD_TS/include/: LCD1602.h  XPT2046.h
C51_Board/AD_TS/src/: LCD1602.c  XPT2046.c  main.c
C51_Board/C4/include/: delay.h  key.h  timer0.h
C51_Board/C4/src/: Buzzer.c  delay.c  key.c  main.c  timer0.c
C51_Board/IC_BUs/include/: I2C.h  Key.h  LCD1602.h
C51_Board/IC_BUs/src/: AT24C02.c  Key.c  LCD1602.c  main.c
C51_Board/IR_Motor/include/: IR.h  Int0.h  Motor.h  Timer0.h  Timer1.h
C51_Board/IR_Motor/src/: Delay.c  IR.c  Int0.c  Motor.c  Timer1.c  main.c
C51_Board/Muisc_demo/include/: Timer0.h  music.h  sheet.h
C51_Board/Muisc_demo/src/: Timer0.c  delay.c  main.c  music.c
C51_Board/clock/: platformio.ini
C51_Board/clock/include/: matrixKey.h
C51_Board/clock/src/: main.c  matrixKey.c
C51_Board/led_board/include/: my_utility.h
C51_Board/led_board/src/: main.c  my_utility.c
C51_Board/led_light/: platformio.ini
C51_Board/led_light/src/: main.c
C51_Board/led_matrix/: platformio.ini
C51_Board/led_matrix/include/: LED_SHOW.h  REGX52.h
C51_Board/led_matrix/src/: main.c
C51_Board/led_monitor/include/: LCD1602.h
C51_Board/led_monitor/src/: LCD1602.c  main.c
C51_Board/matrix_keyboard/include/: matrixKey.h
C51_Board/matrix_keyboard/src/: main.c  matrixKey.c
C51_Board/power_machine/include/: Delay.h  Nixie.h  Timer0.h
C51_Board/power_machine/src/: Nixie.c  Timer0.c  main.c
C51_Board/remote_control/include/: IR.h
C51_Board/remote_control/src/: IR.c  LCD1602.c  Timer0.c  main.c
C51_Board/sec_clock/include/: AT24C02.h  Clock.c  Clock.h  Delay.h  I2C.h  Key.h  Nixie.h
C51_Board/sec_clock/src/: Delay.c  Key.c  Nixie.c  Timer0.c  main.c
C51_Board/serial_port/include/: UART.h
C51_Board/serial_port/src/: UART.c  main.c
C51_Board/tempature_alarm/include/: AT24C02.h  DS18B20.h  Delay.h  I2C.h  Key.h  LCD1602.h  OneWire.h
C51_Board/tempature_alarm/src/: DS18B20.c  Delay.c  I2C.c  Key.c  LCD1602.c  OneWire.c  Timer0.c  main.c
C51_Board/temperature/include/: DS18B20.c  DS18B20.h  Delay.h  LCD1602.h  OneWire.h
C51_Board/temperature/src/: LCD1602.c  OneWire.c  main.c
C51_Board/timer_clock/include/: LCD_1064.h
C51_Board/timer_clock/src/: LCD_1064.c  main.c
C51_Board/timer_runningLight/: platformio.ini
C51_Board/timer_runningLight/include/: LCD1602.h  matrixKey.h  move.h
C51_Board/timer_runningLight/src/: LCD1602.c  main.c  matrixKey.c  move.c
C51_Board/true_music/include/: Buzzer.h  delay.h  key.h  nixie.h
C51_Board/true_music/src/: Buzzer.c  key.c  main.c  nixie.c
DS_AG/: CMakeLists.txt  algraph_main.cpp  main.cpp  mgraph_main.cpp  sort.cpp
DS_AG/include/: algraph.h  mgraph.h  stdc++.h
DS_AG/source/: algraph.cpp  mgraph.cpp
NetWork/: CMakeLists.txt  CPP_new_feature.cpp  IO_async.cpp  ato.cpp  data_cpt.cpp  lock.cpp  main.cpp  threadPool.cpp  单例模式.cpp  条件变量.cpp  线程池.cpp
NetWork/include/: stdc++.h
QT/: CMakeLists.txt  main.cpp
QT/Calculator/: CMakeLists.txt  calculator.cpp  calculator.h  calculator.ui  main.cpp  python_in_cpp.cpp
QT/Calculator/script/: cal.py
QT/First_Demo/: CMakeLists.txt
QT/First_Demo/include/: widget_demo.h  window_demo.h
QT/First_Demo/src/: main.cpp  widget_demo.cpp  widget_demo.ui  window_demo.cpp  window_demo.ui
QT/Forms/: mainwindow.cpp
QT/QT_File/include/: mainwindow.h
QT/QT_File/src/: main.cpp  mainwindow.cpp
QT/QTimer/: main.cpp
QT/QTimer/include/: timer.h
QT/QTimer/src/: timer.cpp  timer.ui
QT/header/: mainwindow.h
UI/: Flutter.md  Grid 布局.md
stm32/3_4_Button/Core/Hardware/: Key.c
stm32/3_4_Button/Core/Inc/: Key.h  LED.h
stm32/3_4_Sound_Control/Core/Hardware/: Buzzer.c
stm32/3_4_Sound_Control/Core/Inc/: Buzzer.h
stm32/4_2_OLED/: CMakeLists.txt
stm32/4_2_OLED/Core/Inc/: OLED.h
stm32/4_2_OLED_Screen/Core/Hardware/: OLED_Data.c
stm32/4_2_OLED_Screen/Core/Inc/: OLED_Data.h
stm32/demo1/: CMakeLists.txt
stm32/demo1/Core/Hardware/: LED.c
前端/: Flutter.md  Pinia 使用.md  Router 常用操作.md  VUE3.md  tailwindcss.md
前端:UI/: Grid 布局.md  QT.md
单片机/: ARM 汇编.md  DCDC 稳态分析.md  ESP32.md  FreeRTOS.md  RT-Thread.md  STM32.md  rust-embedding.md  单片机原理.md  滤波电路.md
后端/: JWT（JSON Web Token）.md  etcd.md  gorm.md  grpc.md
工具/: .clang-format  CMake 用法.md  CubeMX CMake  Preset 设置.md  Kafka.md  Kconfig.md  Nginx.md  Redis.md  Tauri 打包 web项目.md  git 使用.md  xmake.md  容器.md
我所学过的算法/: 一次正反传播的过程.md  动态规划.md  数据结构和算法.md  深度学习.md  设计模式.md
框架/: Burn-Rust 深度学习框架.md  go-zero微服务.md  分布式设计.md
语言/: Assembly.md  C_C++语法.md  Python.md  SQL.md  STL.md
